Fixed first paragrpah spacing in Basic Content.

--- a/docroot/themes/custom/civic/civic-library/components/02-molecules/basic-content/basic-content.scss
+++ b/docroot/themes/custom/civic/civic-library/components/02-molecules/basic-content/basic-content.scss
@@ -81,6 +81,10 @@
   p {
     margin-top: $civic-basic-content-vertical-spacing;
     margin-bottom: $civic-basic-content-vertical-spacing;
+
+    &:first-child {
+      margin-top: 0;
+    }
   }
 
   blockquote {
